<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bug"
        android:title="@string/label_type_bug"/>
    <item
        android:id="@+id/electric"
        android:title="@string/label_type_electric"/>
    <item
        android:id="@+id/dark"
        android:title="@string/label_type_dark"/>
    <item
        android:id="@+id/dragon"
        android:title="@string/label_type_dragon"/>
    <item
        android:id="@+id/fairy"
        android:title="@string/label_type_fairy"/>
    <item
        android:id="@+id/fighting"
        android:title="@string/label_type_fighting"/>
    <item
        android:id="@+id/fire"
        android:title="@string/label_type_fire"/>
    <item
        android:id="@+id/flying"
        android:title="@string/label_type_flying"/>
    <item
        android:id="@+id/ghost"
        android:title="@string/label_type_ghost"/>
    <item
        android:id="@+id/grass"
        android:title="@string/label_type_grass"/>
    <item
        android:id="@+id/ground"
        android:title="@string/label_type_ground"/>
    <item
        android:id="@+id/ice"
        android:title="@string/label_type_ice"/>
    <item
        android:id="@+id/normal"
        android:title="@string/label_type_normal"/>
    <item
        android:id="@+id/poison"
        android:title="@string/label_type_poison"/>
    <item
        android:id="@+id/psychic"
        android:title="@string/label_type_psychic"/>
    <item
        android:id="@+id/rock"
        android:title="@string/label_type_rock"/>
    <item
        android:id="@+id/steel"
        android:title="@string/label_type_steel"/>
    <item
        android:id="@+id/water"
        android:title="@string/label_type_water"/>
</menu>